# app

./: README.md
netdash-desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
netdash-desktop/electron-fallback/: package-lock.json  package.json  tsconfig.json
netdash-desktop/electron-fallback/src/: main.ts
netdash-desktop/scripts/: generate-icons.mjs
netdash-desktop/src/: main.ts  settings.ts
netdash-desktop/src-tauri/: Cargo.toml  tauri.conf.json
netdash-desktop/src-tauri/src/: main.rs
