[package]
name = "netdash-desktop"
version = "0.1.0"
description = "NetDash desktop wrapper app"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
dirs = "5"
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
